# polars-distance

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  sitemap.xml
.github/workflows/: CI.yml
api/array_distance/: index.html
api/list_distance/: index.html
api/string_distance/: index.html
docs/api/: array_distance.md  list_distance.md
docs/usage/: index.md
polars_distance/: Cargo.toml  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
polars_distance/docs/: index.md
polars_distance/docs/api/: dist.md  string_distance.md
polars_distance/polars_distance/: Cargo.toml  README.md  __init__.py  playground.ipynb  pyproject.toml
polars_distance/polars_distance/polars_distance/: __init__.py
polars_distance/polars_distance/src/: array.rs  expressions.rs  lib.rs  list.rs  string.rs
polars_distance/src/: array.rs  expressions.rs  lib.rs  list.rs  other_dist.rs  string.rs
polars_distance/tests/: test_distance_arr.py
search/: search_index.json
usage/: index.html
