[package]
name = "polars_distance"
version = "0.5.3"
edition = "2021"

[lib]
name = "polars_distance"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.44.2" , features = ["dtype-struct", "dtype-array", 'dtype-categorical', 'dtype-u16', 'dtype-u8', 'dtype-i8','dtype-i16']}
polars-core = {version = "0.44.2"}
polars-arrow = {version = "0.44.2"}
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.18", features = ["derive", 'dtype-array','dtype-categorical','dtype-struct'] }
serde = { version = "1", features = ["derive"] }
distances = { version = "1.6.3"}
rapidfuzz = { version = "0.5.0"}
gestalt_ratio = { version = "0.2.1"}
num-traits = { version = "0.2" }

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
