[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "polars-distance"
requires-python = ">=3.8"
dependencies = [
  'polars >= 0.20.6'
]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [
  { name="Ion Koutsours", email="15728914+ion-elgreco@users.noreply.github.com"},
]
description = "Polars plugin for pairwise distance functions"
readme = "README.md"

[project.urls]
"Repository" = "https://github.com/ion-elgreco/polars-distance"
"Documentation" = "https://ion-elgreco.github.io/polars-distance/"
"Change Log" = "https://github.com/ion-elgreco/polars-distance/releases"
"Issue Tracker" = "https://github.com/ion-elgreco/polars-distance/issues"


[tool.maturin]
module-name = "polars_distance._internal"