[package]
name = "polars_distance"
version = "0.4.0"
edition = "2021"

[lib]
name = "polars_distance"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.37.0" , features = ["dtype-struct", "dtype-array", 'dtype-categorical', 'dtype-u16', 'dtype-u8', 'dtype-i8','dtype-i16']}
polars-core = {version = "0.37.0"}
polars-arrow = {version = "0.37.0"}
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-polars = { version = "0.11", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
distances = { version = "1.5.1"}
rapidfuzz = { version = "0.5.0"}

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

[workspace]
members = [
    "../polars_distance",
]

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"